# bodix_chygak2

./: .gitignore  CMakeLists.txt  README.md  bodix.cpp  bodix.hpp  bodix_global.h  main.cpp
.github/workflows/: cmake.yml
tests/: test.cpp
